--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@angular/platform-server": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.1",
+    "@primeng/themes": "^19.1.2",
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.12.1",
     "express": "^4.18.2",
+    "jwt-decode": "^4.0.0",
+    "primeng": "^19.1.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
