--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap-icons": "^1.12.1",
     "express": "^4.18.2",
     "jwt-decode": "^4.0.0",
+    "primeicons": "^7.0.0",
     "primeng": "^19.1.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
